fixed bugapoint edit menu

--- a/src/app/admin-components/bugapoint-management/bugapointmenu/bugapointmenu.component.css
+++ b/src/app/admin-components/bugapoint-management/bugapointmenu/bugapointmenu.component.css
@@ -17,5 +17,5 @@ button {
 }
 
 #bugapointmenu {
-  height: fit-content;
+
 }
