--- a/src/app/admin-components/bugapoint-management/bugapointpanel/bugapointpanel.component.css
+++ b/src/app/admin-components/bugapoint-management/bugapointpanel/bugapointpanel.component.css
@@ -1,9 +1,10 @@
 #bugapointpanel {
-
+  height: 100%;
 }
 
 #bugapointpanel-content {
-  overflow: auto;
+  overflow: scroll;
+  height: calc(100vh - 200px);
 }
 
 mat-expansion-panel {
@@ -22,11 +23,24 @@ mat-form-field {
 }
 
 .buttonBar {
+  position: absolute;
   display: flex;
+  background: white;
+  width: 100%;
+  height: 50px;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   margin-right: 15px;
-  padding-bottom: 30vh;
+  bottom: 60px;
+}
+
+.placeholder {
+  width: 100%;
+  background: white;
+  height: 60px;
+  position: absolute;
+  bottom: 0;
 }
 
 button {
@@ -77,6 +91,7 @@ button {
   justify-content: center;
   align-items: center;
   align-content: space-between;
+  padding-bottom: 60vh;
 }
 
 .grid {
